# wolf-m7m-cpuminer

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  cpu-miner.c  cpuminer-config.h.in  cpuminer-config.h.in~  m7mhash.c  sha256avx.S
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
compat/: Makefile.in
compat/jansson/: Makefile.in
m7/: Makefile.in
